[package]
name = "token-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.25"
ahash = "=0.8.6"
# spl-memo = "4.0.1"
# spl-token= "5.0.0"
# spl_memo = { version = "5.0.0", features = ["default", "v1"] }  # Adjust the version accordingly